--- a/02.ROS2教程/初级/配置你的 ROS2 环境.html
+++ b/02.ROS2教程/初级/配置你的 ROS2 环境.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../../01.ROS概述与环境搭建/intro.html"><strong aria-hidden="true">1.</strong> 第一章 ROS概述与环境搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../01.ROS概述与环境搭建/Ubuntu debian.html"><strong aria-hidden="true">1.1.</strong> Ubuntu Linux（Debian packages）</a></li><li class="chapter-item expanded "><a href="../../01.ROS概述与环境搭建/Windows 二进制.html"><strong aria-hidden="true">1.2.</strong> Windows（二进制）安装</a></li><li class="chapter-item expanded "><a href="../../01.ROS概述与环境搭建/macos.html"><strong aria-hidden="true">1.3.</strong> MacOS（源码）</a></li></ol></li><li class="chapter-item expanded "><a href="../../02.ROS2教程/intro.html"><strong aria-hidden="true">2.</strong> 第二章 ROS2教程</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../02.ROS2教程/初级/配置你的 ROS2 环境.html" class="active"><strong aria-hidden="true">2.1.</strong> 配置你的 ROS2 环境</a></li><li class="chapter-item expanded "><a href="../../02.ROS2教程/初级/介绍 turtlesim 和 rqt/intro.html"><strong aria-hidden="true">2.2.</strong> 介绍 turtlesim 和 rqt</a></li><li class="chapter-item expanded "><a href="../../02.ROS2教程/初级/理解 ROS2 nodes/intro.html"><strong aria-hidden="true">2.3.</strong> 理解 ROS2 nodes</a></li></ol></li><li class="chapter-item expanded "><a href="../../03.How-to指南/intro.html"><strong aria-hidden="true">3.</strong> 第三章 How-to指南</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../../01.ROS概述与环境搭建/intro.html"><strong aria-hidden="true">1.</strong> 第一章 ROS概述与环境搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../01.ROS概述与环境搭建/Ubuntu debian.html"><strong aria-hidden="true">1.1.</strong> Ubuntu Linux（Debian packages）</a></li><li class="chapter-item expanded "><a href="../../01.ROS概述与环境搭建/Windows 二进制.html"><strong aria-hidden="true">1.2.</strong> Windows（二进制）</a></li><li class="chapter-item expanded "><a href="../../01.ROS概述与环境搭建/macos.html"><strong aria-hidden="true">1.3.</strong> MacOS（源码）</a></li></ol></li><li class="chapter-item expanded "><a href="../../02.ROS2教程/intro.html"><strong aria-hidden="true">2.</strong> 第二章 ROS2教程</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../02.ROS2教程/初级/配置你的 ROS2 环境.html" class="active"><strong aria-hidden="true">2.1.</strong> 配置你的 ROS2 环境</a></li><li class="chapter-item expanded "><a href="../../02.ROS2教程/初级/介绍 turtlesim 和 rqt/intro.html"><strong aria-hidden="true">2.2.</strong> 介绍 turtlesim 和 rqt</a></li><li class="chapter-item expanded "><a href="../../02.ROS2教程/初级/理解 ROS2 nodes/intro.html"><strong aria-hidden="true">2.3.</strong> 理解 ROS2 nodes</a></li><li class="chapter-item expanded "><a href="../../02.ROS2教程/初级/理解 ROS2 topics/intro.html"><strong aria-hidden="true">2.4.</strong> 理解 ROS2 topics</a></li><li class="chapter-item expanded "><a href="../../02.ROS2教程/初级/理解 ROS2 services/intro.html"><strong aria-hidden="true">2.5.</strong> 理解 ROS2 services</a></li><li class="chapter-item expanded "><a href="../../02.ROS2教程/初级/理解 ROS2 parameters/intro.html"><strong aria-hidden="true">2.6.</strong> 理解 ROS2 parameters</a></li><li class="chapter-item expanded "><a href="../../02.ROS2教程/初级/理解 ROS2 actions/intro.html"><strong aria-hidden="true">2.7.</strong> 理解 ROS2 actions</a></li><li class="chapter-item expanded "><a href="../../02.ROS2教程/初级/使用 rqt_console/intro.html"><strong aria-hidden="true">2.8.</strong> 使用 rqt_console</a></li><li class="chapter-item expanded "><a href="../../02.ROS2教程/初级/介绍 ROS2 launch/intro.html"><strong aria-hidden="true">2.9.</strong> 介绍 ROS2 launch</a></li></ol></li><li class="chapter-item expanded "><a href="../../03.How-to指南/intro.html"><strong aria-hidden="true">3.</strong> 第三章 How-to指南</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -146,7 +146,7 @@
 <h2 id="目录"><a class="header" href="#目录">目录</a></h2>
 <ul>
 <li><a href="#%E8%83%8C%E6%99%AF">背景</a></li>
-<li><a href="#%E5%89%8D%E6%8F%90">前提</a>
+<li><a href="#%E5%89%8D%E6%8F%90%E6%9D%A1%E4%BB%B6">前提条件</a>
 <ul>
 <li><a href="#1-%E5%90%AF%E7%94%A8%E5%AE%89%E8%A3%85%E6%96%87%E4%BB%B6">1. 启用安装文件</a></li>
 <li><a href="#2-%E5%B0%86%E5%90%AF%E5%8A%A8%E7%8E%AF%E5%A2%83%E5%AE%89%E8%A3%85%E8%BF%87%E7%A8%8B%E6%B7%BB%E5%8A%A0%E5%88%B0-shell-%E5%90%AF%E5%8A%A8%E8%84%9A%E6%9C%AC%E4%B8%AD">2. 将启动环境安装过程添加到 shell 启动脚本中</a></li>
@@ -163,7 +163,7 @@
 <p>ROS2 依赖于使用 shell 环境组合工作空间的概念。<code>Workspace（工作区）</code> 是 ROS 术语，指的是您正在使用 ROS2 开发的系统上的位置。核心 ROS2 workspace 被称为 <code>underlay</code>。后续的本地 workspace 称为 <code>overlays</code>。当使用 ROS2 进行开发时，通常会有几个 workspace 并发操作运行。</p>
 <p>组合使用 workspace 使得针对 ROS2 的不同版本或针对不同的包集合开发更加容易。它还允许在同一台计算机上安装若干个 ROS2 发行版，并在它们之间进行切换。</p>
 <p>这可以通过在每次打开新 shell 时启动安装文件，或者向 shell 启动脚本中添加一次 source 命令来实现。如果没有启用安装文件（设置 ROS2 环境），您将无法访问 ROS2 的命令，或者查找或使用 ROS2 包。换句话说，你也就不能使用 ROS2。</p>
-<h2 id="前提"><a class="header" href="#前提">前提</a></h2>
+<h2 id="前提条件"><a class="header" href="#前提条件">前提条件</a></h2>
 <h3 id="1-启用安装文件"><a class="header" href="#1-启用安装文件">1. 启用安装文件</a></h3>
 <p>你需要在打开的每个新 shell 上运行这个命令来访问 ROS2 命令，如下所示:</p>
 <pre><code class="language-shell">call C:\dev\ros2\local_setup.bat
